--- a/client/src/app/about/about.component.html
+++ b/client/src/app/about/about.component.html
@@ -1,1 +1,5 @@
-<p>about works!</p>
+<div class="header">
+    <h1>About | PlantsApp</h1>
+</div>
+
+<img src="assets/images/about.png"  style="height: 50%; width:50%;">
