--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,9 +1,7 @@
-
+<div class="header">
 <h1>HOME | PlantsApp </h1>
-
-<img src="assets/images/3.png"  style="height: 350px; width:500;">
-
-
-<div>
-
 </div>
+
+<img src="assets/images/mainBG.png"  style="height: 100%; width:100%;">
+
+
