--- a/client/src/app/gallery/gallery.component.css
+++ b/client/src/app/gallery/gallery.component.css
@@ -1,6 +1,4 @@
-
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+.plant-gallery {
+  padding: 10px;
+  margin-left: auto;
+}
