--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="header">
 <h1>HOME | PlantsApp </h1>
 </div>
+<div class="header">
 
-
+</div>
+<div>
 <img src="assets/images/mainBG.png"  style="height: 100%; width:100%;">
+</div>
 
 
+<router-outlet></router-outlet>
