moving image to backend

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -5,7 +5,11 @@
 
 </div>
 <div>
-<img src="assets/images/mainBG.png"  style="height: 100%; width:100%;">
+    <img
+    [src]="getHomeImage('mainBG')"
+    alt="Background Image"
+    style="height: 100%; width: 100%"
+  />
 </div>
 
 
