--- a/client/src/app/gallery/gallery.component.html
+++ b/client/src/app/gallery/gallery.component.html
@@ -1,4 +1,3 @@
-
 <div class="header">
   <h1>GALLERY | PlantsApp</h1>
 </div>
@@ -8,11 +7,16 @@
     <mat-card>
       <strong>{{ plant.latinName }}</strong>
       <mat-card-title>{{ plant.name }}</mat-card-title>
-      <mat-card-content><strong>Watering:</strong> 
-        <strong>Brief:</strong> {{ plant.description }}<br />
-        <strong>Watering:</strong> {{ getWateringScheduleDescription(plant.wateringSchedule) }}<br />
-        <img [src]="getPlantImageUrl(plant)" alt="{{plant.name}}" style="height: 350px; width:500;">
-
+      <mat-card-content
+        ><strong>Watering:</strong> <strong>Brief:</strong>
+        {{ plant.description }}<br />
+        <strong>Watering:</strong>
+        {{ getWateringScheduleDescription(plant.wateringSchedule) }}<br />
+        <img
+          [src]="getPlantImage(plant)"
+          alt="{{ plant.name }}"
+          style="height: 350px; width: 500"
+        />
       </mat-card-content>
       <button (click)="deletePlant(plant.id)">delete</button>
     </mat-card>
@@ -30,7 +34,7 @@
         placeholder="Name"
         required
       /><br />
-      <input 
+      <input
         type="text"
         [(ngModel)]="newPlant.latinName"
         name="latinName"
@@ -49,11 +53,21 @@
           {{ schedule }}
         </option>
       </select>
+      <div>
+        <label for="plantImage">Plant Image:</label>
+        <input
+          type="file"
+          id="plantImage"
+          name="plantImage"
+          (change)="onFileChange($event)"
+          accept="image/png"
+        />
+        <img *ngIf="imageUrl" [src]="imageUrl" alt="Plant Image" />
+      </div>
       <button type="submit">Add Plant</button>
     </form>
   </mat-card-actions>
 </div>
 <app-toolbar></app-toolbar>
-
 
 <router-outlet></router-outlet>
