--- a/client/src/app/searchbar/searchbar.component.html
+++ b/client/src/app/searchbar/searchbar.component.html
@@ -2,3 +2,32 @@
   <input [(ngModel)]="userQuery" name="searchQuery" placeholder="search plants" />
   <button type="submit">Search</button>
 </form>
+
+
+<div *ngIf="searchResults && searchResults.length > 0">
+  <h2>Search Results:</h2>
+  <ul>
+    <li *ngFor="let result of searchResults">
+      <h3>Common Name: {{ result.common_name }}</h3>
+      <p>Scientific Name: {{ result.scientific_name }}</p>
+      <p>Family: {{ result.family }}</p>
+      <p>Slug: {{ result.slug }}</p>
+    </li>
+  </ul>
+</div>
+
+<div class="plant-gallery">
+  <div *ngFor="let result of searchResults" class="plant-card">
+    <mat-card>
+      <strong>Common Name: {{ result.common_name }}</strong>
+      <mat-card-subtitle>Family: {{ result.family }}</mat-card-subtitle>
+      <mat-card-subtitle>Scientific Name: {{ result.scientific_name }}</mat-card-subtitle>
+      <mat-card-subtitle>Slug: {{ result.slug }}</mat-card-subtitle>
+    </mat-card>
+  </div>
+</div>
+
+
+
+
+<router-outlet></router-outlet>
