--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,14 @@
 <div class="header">
-<h1>HOME | PlantsApp </h1>
+  <h1>HOME | plantscopus </h1>
+  <div class ="logo">
+
+ <img
+  [src]="getHomeImage('logo')"
+  alt="plantscopus logo"
+  style="height: 20%; width: 20%"
+  />
+  </div>
+  
 </div>
 <div class="header">
 
