--- a/client/src/app/gallery/gallery.component.html
+++ b/client/src/app/gallery/gallery.component.html
@@ -7,18 +7,24 @@
     <mat-card>
       <strong>{{ plant.latinName }}</strong>
       <mat-card-title>{{ plant.name }}</mat-card-title>
-      <mat-card-content
-        ><strong>Watering:</strong> <strong>Brief:</strong>
+      <mat-card-content> 
+        <strong>Brief:</strong> 
         {{ plant.description }}<br />
-        <strong>Watering:</strong>
+        <strong>Watering Schedule:</strong>
         {{ getWateringScheduleDescription(plant.wateringSchedule) }}<br />
+        <strong>Last Watering Date:</strong> 
+        {{ plant.lastWatered | date }}<br />
         <img
           [src]="getPlantImage(plant)"
           alt="{{ plant.name }}"
           style="height: 350px; width: 500"
         />
+        <button mat-button color="primary" (click)="updateLastWatered(plant)">
+          Water Plant
+        </button>
       </mat-card-content>
-      <button (click)="deletePlant(plant.id)">delete</button>
+      <button mat-button color="warn" (click)="deletePlant(plant.id)">Delete -</button>
+
     </mat-card>
   </div>
 </div>
