--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,25 +1,12 @@
 <div class="header">
-  <h1>HOME | plantscopus </h1>
-  <div class ="logo">
+  <h1>Mynamai</h1>
 
- <img
-  [src]="getHomeImage('logo')"
-  alt="plantscopus logo"
-  style="height: 20%; width: 20%"
-  />
-  </div>
-  
-</div>
-<div class="header">
-
-</div>
-<div>
+  <div class="header">
     <img
-    [src]="getHomeImage('mainBG')"
-    alt="Background Image"
-    style="height: 100%; width: 100%"
-  />
+      src="assets/resource/mainbg.png"
+      alt="Background Image"
+      style="height: 100%; width: 100%"
+    />
 </div>
+  <router-outlet></router-outlet>
 
-
-<router-outlet></router-outlet>
