--- a/client/src/app/about/about.component.html
+++ b/client/src/app/about/about.component.html
@@ -2,4 +2,4 @@
     <h1>About | PlantsApp</h1>
 </div>
 
-<img src="assets/images/about.png"  style="height: 33%; width:33%;">
+<!-- <img src="assets/images/about.png"  style="height: 33%; width:33%;"> -->
