updated to docker img / postgres OK

--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div class="footer">
   <div>
-      <h2>Mynamai<br /></h2>
-      <h3>Mynamai is a pet project built with Spring Boot and Angular and powered by Elise &#x2764; </h3>
+      <p>Mynamai<br /></p>
+      <p>Mynamai is a pet project built with Spring Boot and Angular and powered by Elise &#x2764; </p>
   </div>
+</div>
